[gd_scene load_steps=28 format=1]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Naves/Indi.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Naves/Nikolai.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Naves/Bouclier.png" type="Texture" id=5]
[ext_resource path="res://Sounds/introp.wav" type="Sample" id=6]
[ext_resource path="res://Sounds/test.wav" type="Sample" id=7]
[ext_resource path="res://Sounds/star.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprites/UI/04B_30__.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/UI/PNG/barHorizontal_blue_mid.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/kenvector_future.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Sprites/UI/PNG/barHorizontal_green_mid.png" type="Texture" id=12]

[sub_resource type="Animation" id=10]

resource/name = "idle"
length = 20.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Nave_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2.5, 4.5, 6.5, 8, 9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -80, 500 ), Vector2( 950, 290 ), Vector2( 1180, 360 ), Vector2( 721.818, 410.909 ), Vector2( 110, 220 ), Vector2( -200, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Nave_1:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2.5, 4.5, 6.5, 8, 9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -53.8036, -53.8036, -145.842, -286.146, -310.336, -288.959 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Nave_2:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2.5, 3.7, 6, 8.5, 10.5, 13, 15.1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 520, 690 ), Vector2( 500, 660 ), Vector2( 440, 120 ), Vector2( 30, -110 ), Vector2( 110, -100 ), Vector2( 181.304, 37.3913 ), Vector2( 380, 560 ), Vector2( 560, 800 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Nave_2:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2.5, 3.7, 6, 8.5, 10.5, 13, 15.1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 163.451, 212.415, 195.765, 205.398, 143.779 ]
}

[sub_resource type="Animation" id=11]

resource/name = "stars"
length = 20.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Nave_1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -82.8807, 490.398 ), Vector2( 310.146, 403.89 ), Vector2( 313.47, 407.214 ), Vector2( 753.431, 90.9088 ), Vector2( 268.056, 116.014 ), Vector2( 758.824, 468.186 ), Vector2( 1147.45, 386.759 ), Vector2( 910.575, 185.041 ), Vector2( 783.441, -102.035 ), Vector2( -156.184, -92.7626 ), Vector2( -347.818, 386.322 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Nave_1:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -59.4488, -59.4488, -59.4488, -163.696, -239.6, -362.346, -362.346, -480.939, -480.939, -480.939, -480.939 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Nave_2:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 522.156, 695.928 ), Vector2( 334.206, 408.454 ), Vector2( 326.399, 408.086 ), Vector2( 767.035, 97.7107 ), Vector2( 261.66, 113.816 ), Vector2( 752.428, 465.988 ), Vector2( 1141.06, 384.56 ), Vector2( 904.178, 182.843 ), Vector2( 777.045, -104.233 ), Vector2( -162.58, -94.9608 ), Vector2( -354.214, 384.124 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Nave_2:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 7.7484, 30.2447, 30.2447, -54.4489, -130.495, -238.196, -238.196, -345.495, -345.495, -345.495, -345.495 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Nave_3:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -113.018, -20.5487 ), Vector2( 319.356, 397.878 ), Vector2( 319.356, 397.878 ), Vector2( 764.314, 86.8277 ), Vector2( 263.939, 122.933 ), Vector2( 754.707, 475.105 ), Vector2( 1143.34, 393.677 ), Vector2( 906.458, 191.96 ), Vector2( 779.324, -95.1163 ), Vector2( -160.301, -85.8437 ), Vector2( -351.935, 393.241 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Nave_3:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 2, 3.5, 4, 7, 10, 13, 15, 18, 18.5, 19 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -127.238, -164.4, -164.4, -252.861, -376.465, -490.672, -490.672, -594.498, -594.498, -594.498, -594.498 ]
}

[sub_resource type="SampleLibrary" id=12]

samples/introp = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/test = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[sub_resource type="StyleBoxFlat" id=13]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
light_color = Color( 0.8, 0.8, 0.8, 0 )
dark_color = Color( 0.8, 0.8, 0.8, 0 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=14]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
light_color = Color( 0.8, 0.8, 0.8, 0 )
dark_color = Color( 0.8, 0.8, 0.8, 0 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=15]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=1]

font/size = 65
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 10 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 10 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 10 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="DynamicFont" id=5]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 11 )

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 12 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 12 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 12 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="DynamicFont" id=9]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 11 )

[node name="MainMenu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 39.0211, 79.8549 )
texture = ExtResource( 2 )

[node name="Nave_1" type="Sprite" parent="."]

transform/pos = Vector2( -347.818, 386.322 )
transform/rot = -480.939
texture = ExtResource( 3 )
offset = Vector2( -0.330253, 35.0722 )

[node name="Nave_2" type="Sprite" parent="."]

transform/pos = Vector2( -354.214, 384.124 )
transform/rot = -345.495
texture = ExtResource( 4 )
offset = Vector2( -0.280642, 31.2363 )

[node name="Nave_3" type="Sprite" parent="."]

transform/pos = Vector2( -351.935, 393.241 )
transform/rot = -594.498
texture = ExtResource( 5 )
offset = Vector2( 1.97253, 33.8088 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 10 )
anims/stars = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 12 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Star" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 174.0
margin/right = 927.0
margin/bottom = 240.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[node name="fondo" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Panel" type="PanelContainer" parent="."]

rect/min_size = Vector2( 600, 400 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = -1.0
margin/top = 91.0
margin/right = 1026.0
margin/bottom = 538.0
custom_styles/panel = SubResource( 15 )

[node name="Title" type="Label" parent="Panel"]

rect/min_size = Vector2( 800, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1027.0
margin/bottom = 447.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.972656, 0.972656, 1 )
text = "Galaxy Heroes"
align = 1
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="CenterContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 357.0
margin/top = 203.0
margin/right = 657.0
margin/bottom = 403.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]

rect/min_size = Vector2( 200, 200 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 200.0
custom_constants/separation = 20
alignment = 1

[node name="Jugar" type="Button" parent="Panel/Panel/VBoxContainer"]

rect/min_size = Vector2( 300, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = 82.0
margin/right = 298.0
margin/bottom = 142.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "JUGAR"
flat = false

[node name="Controles" type="Button" parent="Panel/Panel/VBoxContainer"]

rect/min_size = Vector2( 200, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 125.0
margin/right = 300.0
margin/bottom = 155.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Controles"
flat = false

[connection signal="pressed" from="Star" to="." method="_on_Star_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="fondo" to="." method="_on_fondo_timeout"]

[connection signal="pressed" from="Panel/Panel/VBoxContainer/Jugar" to="." method="_on_Jugar_pressed"]

[connection signal="pressed" from="Panel/Panel/VBoxContainer/Controles" to="." method="_on_Controles_pressed"]


